<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textResult"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:hint="@string/button_0"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textDirection="firstStrong"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/linerBtns4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textResult"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_clear"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_change"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_percent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF9800"
            android:text="@string/button_div"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerBtns3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linerBtns4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_7"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_9"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF9800"
            android:text="@string/button_mult"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerBtns2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linerBtns3"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_6"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF9800"
            android:text="@string/button_minus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerBtns1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linerBtns2"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF9800"
            android:text="@string/button_plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerBtns0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linerBtns1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn0"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorGreyDark"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_point"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btnResult"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FF9800"
            android:text="@string/button_result"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="36sp" />
    </LinearLayout>

</RelativeLayout>